# diary

./: .markdownlint.json  README.md  test.py
01/: README.md
02/: README.md
03/: README.md  cli.py  exemple.c  library.py  words.py
04/: README.md  test.py
04/project/: __init__.py  __main__.py
05/: README.md  add.py  prout.py
05/toto/: __init__.py  bras.py  jambes.py
06/: README.md  exception.py  exemple.c  heritage.py
06-git/: README.md  bonjour_transform.py  sha256-zeros.py
06/module/: __init__.py  __main__.py
07/: README.md  baudelaire-hacked.txt  baudelaire.txt  pandas.ipynb
08/: INFO.md  README.md
08/project/: README.md  clock.py  main.py  pyproject.toml
09/: README.md  audio.md  babisstat.md  fingerflow.md  gmao.md  lights.ipynb  lights.md  moon.md  pv.md  solar.md  swissadvisor.md
10/: README.md  koch.py  snow.py
10/example-project/: .gitignore  README.md  pyproject.toml
10/example-project/spaceship/: __init__.py  __main__.py
10/example-project/tests/: test_conversion.py
11/: Groupes.md  README.md  albatros.txt
12/: 1-chalet.md  2-powerplant.md  3-conway.md  5-filters.md  6-StratoPrediction.md  7-breakout.md  8-manim.md  README.md  data.csv  ideas.yaml
13/prout/: README.md  pyproject.toml
13/prout/titi/: __init__.py  __main__.py
13/prout/toto/: foo.py
14/: EVAL.md  README.md
15/: README.md
